--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
         /* Typography & Components */
         .header { background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%); padding: 50px 20px; text-align: center; }
         .content { padding: 40px 35px; line-height: 1.6; }
-        .button-container { padding: 25px 0; text-align: center; }
-        .button { background-color: #2563eb; color: #ffffff !important; padding: 18px 40px; text-decoration: none; border-radius: 50px; font-weight: 800; display: inline-block; font-size: 18px; box-shadow: 0 10px 15px -3px rgba(37, 99, 235, 0.3); }
+        .button-container { padding: 15px 0; text-align: center; }
+        .button { background-color: #2563eb; color: #ffffff !important; padding: 14px 28px; text-decoration: none; border-radius: 50px; font-weight: 800; display: inline-block; font-size: 16px; box-shadow: 0 10px 15px -3px rgba(37, 99, 235, 0.3); margin: 5px; vertical-align: middle; line-height: 1.2; }
+        .viber-button { background-color: #7360f2; box-shadow: 0 10px 15px -3px rgba(115, 96, 242, 0.3); }
         .feature-box { background-color: #f8fafc; border-radius: 20px; padding: 25px; margin-bottom: 15px; border: 1px solid #e2e8f0; transition: all 0.3s ease; }
         .footer { padding: 45px; text-align: center; font-size: 13px; color: #94a3b8; background-color: #0f172a; }
         
@@ -48,6 +49,7 @@
         @media screen and (max-width: 600px) {
             .content { padding: 30px 20px; }
             .main { border-radius: 0; }
+            .button { display: block; margin: 10px 0; width: auto; }
         }
     </style>
 </head>
@@ -152,9 +154,17 @@
                     <div style="margin-top: 45px; padding: 35px; background-color: #0f172a; border-radius: 28px; text-align: center;">
                         <p style="color: #3b82f6; font-size: 12px; text-transform: uppercase; font-weight: 800; margin-bottom: 12px; letter-spacing: 3px;">Υπεύθυνος Επικοινωνίας</p>
                         <p style="color: #ffffff; font-size: 26px; font-weight: 800; margin: 0;">Ακης Καρεντζος</p>
-                        <p style="color: #94a3b8; font-size: 15px; margin-bottom: 30px;">akiskarentzos@imberal.gr</p>
+                        <p style="color: #94a3b8; font-size: 15px; margin-bottom: 25px;">akiskarentzos@imberal.gr</p>
+                        
                         <div class="button-container">
-                            <a href="tel:+306934932782" class="button">ΚΛΗΣΗ: 6934932782</a>
+                            <a href="tel:+306934932782" class="button">
+                                📞 ΚΛΗΣΗ<br>
+                                <span style="font-size: 11px; font-weight: 400; opacity: 0.85;">6934932782</span>
+                            </a>
+                            <a href="viber://chat?number=306934932782" class="button viber-button">
+                                💬 VIBER CHAT<br>
+                                <span style="font-size: 11px; font-weight: 400; opacity: 0.85;">6934932782</span>
+                            </a>
                         </div>
                     </div>
                 </td>
